[package]
name = "tarea"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0.0"
lazy_static = "1.4.0"
owo-colors = "3.4.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["fast-rng", "v4"] }
